--- a/src/analysis/multi_version.tex
+++ b/src/analysis/multi_version.tex
@@ -38,7 +38,7 @@ This voting approach to handling errors is sometimes referred to as \textbf{faul
     \caption{N-Version Programming}
 \end{figure}
 
-The primary drawback of \acrshort{nvp} is its requirement to execute all of the versions before determining the final output. This can be highly resource-intensive, especially for large or complex tasks, as it requires significant computational power and memory to run multiple versions simultaneously.
+The primary drawback of \acrshort{nvp} is its requirement to execute all of the versions before determining the final output. This can be highly resource intensive, especially for large or complex tasks, as it requires significant computational power and memory to run multiple versions simultaneously.
 
 For systems with limited resources, such as embedded systems, this approach can be particularly inefficient. The need to allocate resources for each version can strain the system's capabilities, potentially reducing its overall performance and responsiveness. As a result, while \acrshort{nvp} enhances fault tolerance and reliability, it may not be suitable for applications where resource constraints are a priority or where processing efficiency is critical.
 
