--- a/src/analysis/prior_work.tex
+++ b/src/analysis/prior_work.tex
@@ -1,6 +1,6 @@
 \subsection{Previous work}
 
-While the analysis so far was mostly theoretical, this section outlines methods already implemented and tested in practice, giving an insight into what we can expect when implemnting our own fault-tolerance methods.
+While the analysis so far was mostly theoretical, this section outlines methods already implemented and tested in practice, giving an insight into what we can expect when implementing our own fault-tolerance methods.
 
 \subsubsection{EDDI}
 
