--- a/src/types_of_faults.tex
+++ b/src/types_of_faults.tex
@@ -12,7 +12,7 @@ Permanent fault is a lasting fault within the system that requires maintenance t
 
 \subsection{Hardware faults}
 
-Hardware faults are caused by external factors beyond our control as software developers. They are usually caused by environmental influences, such as cosmic radiation in space, electro-magnetic fields, adverse weather conditions or heavy system usage.
+Hardware faults are caused by external factors beyond our control as software developers. They are usually caused by environmental influences, such as cosmic radiation in space, electromagnetic fields, adverse weather conditions or heavy system usage.
 
 One of the most common hardware faults is memory corruption, which can appear in many forms and result from a wide range of causes. For instance, radiation exposure in space can cause \acrshortpl{seu}, flipping individual bits in memory and altering data unpredictably. Similarly, physical damage to storage media, such as hard drives or SSDs, might corrupt specific regions of the file system, making certain data inaccessible or incorrect.
 
