--- a/src/declaration.tex
+++ b/src/declaration.tex
@@ -21,7 +21,7 @@
 I declare on my honor that I have prepared this work independently, on the basis of consultations and using the listed literature. \\
 
 In Bratislava 12.5.2025
-\hspace*{\fill} \signaturespace{5cm}{\myName}
+\hspace*{\fill} {\myName}
 
 
 \clearpage
